Frontend/REST API creation & integration